# tensorscope

./: .gitignore  .gitmodules  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  Makefile  README.md  mkdocs.yml  notio.toml  pyproject.toml
.claude/: settings.json
.claude/commands/: biblio-batch-curate.md  codelib-discovery.md  idea-capture.md  literature-discovery.md  literature-presentation.md  marimo-session.md  mcp-tool-scaffold.md  pipeio-flow-create.md  pipeio-guide.md  pipeio-nb-extract.md  progress-report-deck.md  questio-ground.md  questio-investigate.md  questio-iterate.md  questio-next.md  questio-record.md  questio-report.md  questio-session.md  rag-query.md
.claude/skills/audit/: SKILL.md
.claude/skills/session-wrap/: SKILL.md
.claude/skills/smoke/: SKILL.md
.claude/skills/ultra-batch/: SKILL.md
.claude/skills/verify-ui/: SKILL.md
.datalad/: config
.github/workflows/: docs.yml
.notio/templates/: commit.md  idea.md  issue.md
.projio/: config.yml  packages.yml  projio.mk
.projio/biblio/: biblio.yml  tag_vocab.yml
.projio/codio/: catalog.yml  profiles.yml  repos.yml
.projio/filters/: include.lua
.projio/indexio/: config.yaml
.projio/notio/templates/: daily.md  handoff.md  meeting.md  personal.md  result.md  task.md  weekly.md
.projio/pipeio/: registry.yml
.projio/render/: quarto.yml
.projio/render/csl/: apa.csl  chicago-author-date.csl  vancouver.csl
bench/: RESULTS.md  bench_geometry_format.py  serve_linear_probe.py  serve_planar_probe.py
bib/: .gitignore  Makefile  README.md
bib/config/: biblio.yml  citekeys.md  rag.yaml
bib/srcbib/: README.md
docs/: PERSISTENT_ISSUES.md  demo-data.md  diataxis.md  frontend-phase3.md  hand-off-2026-03-11.md  index.md  migration-study.md  react-vite-typescript-migration-study-prompt.md
docs/adr/: 0001-frontend-foundation.md  0002-uplot-timeseries-renderer.md  0003-workspace-shell-architecture.md  0004-shared-selectionstate-coordination.md  0005-cpu-first-rendering.md  0006-staged-prompt-pack-development.md  0007-unified-time-transport.md  0008-propagation-playback.md  0009-navigation-ownership.md  0010-channel-native-canonical-geometry.md  index.md
docs/api/: openapi.yaml  phase2.md
docs/architecture/: invariants.md  pipeline-export.md  tensorscope.md  transform-dag.md
docs/design/: channel-viewport.md  contract-v2.md  detector-overlay.md  encoding-heatmap.md  event-filtering-plan.md  event-review.md  filtered-band-overlay.md  multichannel-display-fixes-plan.md  neuropixels-multiprobe.md  oscillation-coupling-plan.md  panel-layout-redesign.md  perf-navigation-plan.md  pipeline-spec.md  probe-layout.md  propagation-playback.md  refactor-plan.md  roadmap-coupling-tooling.md  time-transport.md  ui-layout-concepts.md
docs/dev/ontology-analysis/: entity_code_map.md  entity_inventory.md
docs/explanation/: entities.md  index.md
docs/explanation/ontology/: README.md  architecture.md  entities.md  layers.md  relationships.md  terminology.md
docs/how-to/: index.md
docs/log/: agent-activity.md  handoff-20260528.md  handoff-20260603-navigator.md  handoff-20260603.md  ideas.md  index.md  issues-ui.md  issues.md  mkdocs.yml
docs/log/commit/: index.md
docs/log/daily/: index.md
docs/log/handoff/: handoff-arash-20260603-191749-097700.md  index.md
docs/log/idea/: idea-arash-20260312-121103-481429.md  idea-arash-20260312-160232-404078.md  idea-arash-20260312-160241-428579.md  idea-arash-20260312-160542-408320.md  idea-arash-20260313-141041-603439.md  idea-arash-20260502-130000-expert-review.md  idea-arash-20260502-140000-review-backlog.md  idea-arash-20260507-160104-478773.md  idea-arash-20260507-161642-673518.md  idea-arash-20260510-113227-909826.md  index.md
docs/log/issue/: index.md  issue-arash-20260312-155321-891713.md  issue-arash-20260312-180614-807664.md  issue-arash-20260313-141053-900146.md  issue-arash-20260313-172926-282460.md  issue-arash-20260508-142724-956601.md  issue-arash-20260508-170721-770464.md  issue-arash-20260509-202009-876183.md  issue-arash-20260510-003217-522670.md  issue-arash-20260510-003259-041033.md  issue-arash-20260510-011533-364946.md  issue-arash-20260510-111746-938324.md  issue-arash-20260511-182119-502518.md  task-cogpy-compat-20260423-120000-000001.md  task-g4-event-summary-20260512-012738-149655.md  task-g5-detector-overlay-20260512-012738-202424.md  task-g6-event-notes-tags-20260512-012738-254810.md  task-g7-anatomy-labels-20260512-012738-307093.md  (+8 more)
docs/prompts/: README.md  agent_runbook.md  context_snapshot.md  prompt_registry.md  roadmap.md  task_status.md
docs/reference/: index.md
docs/reference-studies/: deck-gl.md  higlass.md  index.md  jupyterlab.md  jupyterlite.md  neuroglancer.md  nivo.md  observable-plot.md  perspective.md  reference-studies.yml  uPlot.md  visx.md
docs/research/: multichannel-timeseries-perf-prior-art.md  time-transport-survey.md  timeseries-cloud-search-brief.md  transport-survey.md
docs/tutorials/: index.md
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css
resources/: cogpy
scripts/: generate_demo_data.py
src/tensorscope/: __init__.py  cli.py
src/tensorscope.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_bandpass_slice.py  test_channel_mask.py  test_channel_scale.py  test_dag.py  test_demo_bundle.py  test_downsample_fidelity.py  test_downsample_vectorized.py  test_event_average_view.py  test_event_review.py  test_events_manifest.py  test_geometry_adjacency.py  test_geometry_channel_native.py  test_lod_pyramid.py  test_neuropixels.py  test_pairing.py  test_pipeline.py  test_pipeline_io.py  test_probe_layout.py  test_propagation_movie.py  test_psd_live.py  test_raster.py  test_server_api.py  test_slice_meta_fidelity.py  test_slice_v2.py  test_spectral_pool.py  test_spectrogram_live.py  test_tensorscope.py  test_timeseries_zscore_lod.py  test_tracks.py  test_trajectory.py  test_transforms.py  test_view_result_cache.py
(+308 files in other folders)
