[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tensorscope"
version = "0.1.0"
description = "Tensor-centric scientific data viewer"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "" }]
license = { text = "MIT" }
dependencies = [
    "numpy>=1.24",
    "xarray>=2024.0",
    "pandas>=2.0",
    "pydantic>=2.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pyarrow>=15.0",
    "pyyaml>=6.0",
    "cogpy @ git+https://github.com/arashshahidi1997/cogpy.git@v0.2.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "build", "twine"]

[project.scripts]
tensorscope = "tensorscope.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tensorscope = ["static/**/*"]
