[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tensorscope"
version = "0.1.0"
description = "Tensor-centric scientific data viewer"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "" }]
license = { text = "MIT" }
dependencies = [
    "numpy>=1.24",
    "xarray>=2024.0",
    "pandas>=2.0",
    "pydantic>=2.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pyarrow>=15.0",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "ecogpy[io,signal,perf] @ git+https://github.com/arashshahidi1997/cogpy.git@v0.2.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "build", "twine"]

[project.scripts]
tensorscope = "tensorscope.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tensorscope = ["static/**/*"]

# ── Pixi configuration ──────────────────────────────────────────────────────
# The conda deps below are pre-built wheels (numpy/scipy/pyarrow etc. via
# conda-forge) that the editable pypi install of tensorscope will reuse.
# cogpy comes in transitively via [project] dependencies as a pip/git dep.

[tool.pixi.workspace]
name = "tensorscope"
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.dependencies]
python = "3.11.*"
pip = "*"
git = "*"
nodejs = ">=20,<23"  # node 25 breaks jsdom localStorage in vitest
numpy = ">=1.24"
scipy = "*"
pandas = ">=2.0"
xarray = ">=2024.0"
pyarrow = ">=15.0"
pyyaml = ">=6.0"
fastapi = ">=0.110"
uvicorn-standard = ">=0.29"
pydantic = ">=2.0"
# C-heavy deps pulled in by `ecogpy[io,signal,perf]` — installing from
# conda-forge gets pre-built binaries instead of pip compiling from source.
dask = "*"
h5py = "*"
zarr = "*"
scikit-image = "*"
pyfftw = "*"

[tool.pixi.pypi-dependencies]
tensorscope = { path = ".", editable = true }

[tool.pixi.feature.dev.dependencies]
pytest = "*"
pytest-cov = "*"
python-build = "*"
twine = "*"

[tool.pixi.environments]
default = { features = ["dev"] }

[tool.pixi.tasks]
test = "pytest tests/ -q"
demo-data = "python scripts/generate_demo_data.py --output-dir data/demo"
serve = "python -m tensorscope.cli serve data/demo_lfp.nc --host 127.0.0.1 --port 8000"
build-py = "python -m build"
frontend-install = { cmd = "npm install", cwd = "frontend" }
frontend-dev = { cmd = "npm run dev", cwd = "frontend" }
frontend-test = { cmd = "npm run test", cwd = "frontend" }
# Build the frontend, then sync the output into src/tensorscope/static/ so
# the FastAPI server (which serves from `_find_frontend_dist` — checks
# `static/` first, then `frontend/dist/`) immediately picks up the new
# bundle. Without the sync step, a fresh `frontend-build` only updates
# `frontend/dist/`, but if `src/tensorscope/static/` exists from a prior
# build it shadows the new dist and the user keeps seeing stale code.
frontend-build = { cmd = "npm run build && rm -rf ../src/tensorscope/static && cp -r dist ../src/tensorscope/static", cwd = "frontend" }
